package edu.hitsz.supply;

public interface Supply {
    public void forward();
    public int active();
    public int getKind();
}
